--- a/kubernetes/svc.yaml
+++ b/kubernetes/svc.yaml
@@ -2,10 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mypythonapp
+  labels:
+    app: mypythonapp
 spec:
   selector:
     app: mypythonapp
   ports:
-  - port: 5000
+  - protocol: TCP
+    port: 5000
     targetPort: 5000
   type: ClusterIP
